--- a/ReseauSocial.Asp/Views/Shared/_Layout.cshtml
+++ b/ReseauSocial.Asp/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                         @if (sessionManager.CurentUser is null)
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Register">Enrgister</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Register">Enregister</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Login">Connecter</a>
@@ -42,6 +42,12 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="ProfilUser">Mon profile</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Article" asp-action="Index"> Tous les articles</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Article" asp-action="GetMyArticle"> Mes articles</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Logout">Déconnecter</a>
