--- a/ReseauSocial.Asp/Views/Article/Index.cshtml
+++ b/ReseauSocial.Asp/Views/Article/Index.cshtml
@@ -2,10 +2,10 @@
 @model IEnumerable<ReseauSocial.Asp.Models.ArticleAsp>
 
 @{
-    ViewData["Title"] = "Accueil";
+    ViewData["Title"] = "Index";
 }
 
-<h1> Liste des 10 derniers articles</h1>
+<h1>Liste de tous les atricles</h1>
 
 <p>
     <a asp-action="Insert" asp-controller="Article">Creer un nouvel article</a>
@@ -54,22 +54,20 @@
                 </td>
                 <td>
                     <a asp-controller="Article" asp-action="GetArticleById" asp-route-id="@item.Id" class="btn btn-success">Details</a>
-                    @if (sessionManager.CurentUser is not null)
+
+                    @if (sessionManager.CurentUser.Id == item.UserId)
                     {
-                        @if (sessionManager.CurentUser.Id == item.UserId)
-                        {
-                            <a asp-controller="Article" asp-action="Update" asp-route-id="@item.Id" class="btn btn-primary">Modifier</a>
-                            <a asp-controller="Article" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">Effacer</a>
-                        }
-                        else
-                        {
-                            <a asp-controller="Article" asp-action="SignalArticle" asp-route-id="@item.Id" class="btn btn-danger">Signaler</a>
-                        }
+                        <a asp-controller="Article" asp-action="Update" asp-route-id="@item.Id" class="btn btn-primary">Modifier</a>
+                        <a asp-controller="Article" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">Effacer</a>
+
                     }
+                    else
+                    {
+                        <a asp-controller="Article" asp-action="SignalArticle" asp-route-id="@item.Id" class="btn btn-danger">Signaler</a>
 
-
+                    }
                 </td>
             </tr>
-        }
+            }
     </tbody>
 </table>
