--- a/ReseauSocial.Asp/Views/Article/GetMyArticle.cshtml
+++ b/ReseauSocial.Asp/Views/Article/GetMyArticle.cshtml
@@ -28,9 +28,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.OnLigne)
             </th>
-            <th>
+          @*  <th>
                 @Html.DisplayNameFor(model => model.UserId)
-            </th>
+            </th>*@
             <th></th>
         </tr>
     </thead>
@@ -51,9 +51,9 @@
             <td>
                 @Html.DisplayFor(modelItem => item.OnLigne)
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UserId)
-            </td>
+           @* <td>
+                @item.UserArticle.FirstName  @item.UserArticle.LastName
+            </td>*@
             <td>
                 <a asp-controller="Article" asp-action="GetArticleById" asp-route-id="@item.Id" class="btn btn-success">Details</a>
                 <a asp-controller="Article" asp-action="Update" asp-route-id="@item.Id" class="btn btn-primary">Modifier</a>
