--- a/ReseauSocial.Asp/Views/Article/Index.cshtml
+++ b/ReseauSocial.Asp/Views/Article/Index.cshtml
@@ -2,14 +2,12 @@
 @model IEnumerable<ReseauSocial.Asp.Models.ArticleAsp>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Accueil";
 }
 
-<h1>Liste de tous les atricles</h1>
+<h1> Liste des 10 derniers articles</h1>
 
-<p>
-    <a asp-action="Insert" asp-controller="Article">Creer un nouvel article</a>
-</p>
+
 <table class="table">
     <thead>
         <tr>
@@ -20,14 +18,12 @@
             <th>
                 @Html.DisplayNameFor(model => model.Content)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CommentOk)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.OnLigne)
-            </th>
+
             <th>
                 @Html.DisplayNameFor(model => model.UserId)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Date)
             </th>
             <th></th>
         </tr>
@@ -38,36 +34,36 @@
             <tr>
 
                 <td>
-                    @Html.DisplayFor(modelItem => item.Title)
+                    @item.Title
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Content)
+                    @item.Content
+                </td>
+
+                <td>
+                    <a class="btn btn-primary" asp-controller="Article" asp-action="GetArticleByUserId" asp-route-id="@item.UserId">@item.UserArticle.FirstName  @item.UserArticle.LastName</a>
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.CommentOk)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.OnLigne)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.UserId)
+                    @item.Date
                 </td>
                 <td>
                     <a asp-controller="Article" asp-action="GetArticleById" asp-route-id="@item.Id" class="btn btn-success">Details</a>
-
-                    @if (sessionManager.CurentUser.Id == item.UserId)
+                    @if (sessionManager.CurentUser is not null)
                     {
-                        <a asp-controller="Article" asp-action="Update" asp-route-id="@item.Id" class="btn btn-primary">Modifier</a>
-                        <a asp-controller="Article" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">Effacer</a>
-
+                        @if (sessionManager.CurentUser.Id == item.UserId)
+                        {
+                            <a asp-controller="Article" asp-action="Update" asp-route-id="@item.Id" class="btn btn-primary">Modifier</a>
+                            <a asp-controller="Article" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">Effacer</a>
+                        }
+                        else
+                        {
+                            <a asp-controller="Article" asp-action="SignalArticle" asp-route-id="@item.Id" class="btn btn-danger">Signaler</a>
+                        }
                     }
-                    else
-                    {
-                        <a asp-controller="Article" asp-action="SignalArticle" asp-route-id="@item.Id" class="btn btn-danger">Signaler</a>
 
-                    }
+
                 </td>
             </tr>
-            }
+        }
     </tbody>
 </table>
