--- a/ReseauSocial.Asp/Views/User/Index.cshtml
+++ b/ReseauSocial.Asp/Views/User/Index.cshtml
@@ -1,40 +1,42 @@
 ﻿@model IEnumerable<ReseauSocial.Asp.Models.UserAsp>
-
+@inject ReseauSocial.Asp.Sessions.ISessionHelpers sessionManager
 @{
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Mes contacts</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+
 <table class="table">
     <thead>
-        <tr>  
+        <tr>
             <th>
                 @Html.DisplayNameFor(model => model.LastName)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.FirstName)
-            </th>        
+            </th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>           
-            <td>
-                @Html.DisplayFor(modelItem => item.LastName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FirstName)
-            </td>
-            <td>
-                @Html.ActionLink("Suivre", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Envoyer un messsage", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Black lister", "Delete", new { /* id=item.PrimaryKey */ })
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.LastName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.FirstName)
+                </td>
+                <td>
+
+                    <a asp-controller="Message" asp-action="MessageTo" asp-route-id="@item.Id" class="btn btn-success">Envoyer un message</a>
+                    <a asp-controller="Article" asp-action="GetArticleByUserId" asp-route-id="@item.Id" class="btn btn-success">Voir les articles</a>
+                    @* <a asp-controller="User" asp-action="Blacklist" asp-route-id="@item.Id" class="btn btn-success">Black lister</a>
+                        <a asp-controller="User" asp-action="Follow" asp-route-id="@item.Id" class="btn btn-danger">Suivre</a>*@
+
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
