--- a/ReseauSocial.Asp/Views/User/Login.cshtml
+++ b/ReseauSocial.Asp/Views/User/Login.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "Login";
 }
 
-<h1>Login</h1>
+<h1>Se connecter</h1>
 
-<h4>LoginUser</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -23,14 +22,14 @@
                 <span asp-validation-for="Passwd" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Connexion" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="ProfilUser">Retour vers votre profile</a>
+    <a  asp-controller="Home" asp-action="Index">Retour</a>
 </div>
 
 @section Scripts {
