--- a/ReseauSocial.Asp/Views/User/ProfilUser.cshtml
+++ b/ReseauSocial.Asp/Views/User/ProfilUser.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "ProfilUser";
 }
 
-<h1>ProfilUser</h1>
+<h1>Votre profile</h1>
 
 <div>
     <h4>ProfileUser</h4>
@@ -32,24 +32,25 @@
     </dl>
 </div>
 <div>
-    
-    @Html.ActionLink("Editez votre profile", "Update", new { id = Model.Id }) |
+    <a asp-controller="User" asp-action="Update" asp-route-id="@Model.Id" class="btn btn-success">Modifier</a>
+
 
     @if (Model.Status.Id == (int)ReseauSocial.Asp.Models.StatusType.Actived)
     {
-        @Html.ActionLink("Déactiver votre compte", "DeactivateStatus", new { ChangUserId = Model.Id })
-        @Html.ActionLink("Je demande de suppression de mon compte", "AskDeleteStatus", new { ChangedUserId = Model.Id })
+        <a asp-controller="User" asp-action="DeactivateStatus" asp-route-id="@Model.Id" class="btn btn-danger">Déactiver</a>
+        <a asp-controller="User" asp-action="AskDeleteStatus" asp-route-id="@Model.Id" class="btn btn-danger">Supprimer</a>
+
     }
     else if (Model.Status.Id == (int)ReseauSocial.Asp.Models.StatusType.Deactived)
     {
-        @Html.ActionLink("Réactiver de mon compte", "ReactivateStatus", new { ChangedUserId = Model.Id })
+        <a asp-controller="User" asp-action="ReactivateStatus" asp-route-id="@Model.Id" class="btn btn-succes">Réactiver</a>
     }
     else if (Model.Status.Id == (int)ReseauSocial.Asp.Models.StatusType.AskDeleted)
     {
-        @Html.ActionLink("Réactiver de mon compte", "ReactivateStatus", new { ChangedUserId = Model.Id })
+        <a asp-controller="User" asp-action="ReactivateStatus" asp-route-id="@Model.Id" class="btn btn-succes">Réactiver</a>       
     }
   
-    <a asp-action="Index">Retour</a>
 </div>
-
-@Html.ActionLink("Activation de mon compte", "AskActivateStatus", new { ChangedUserId = Model.Id })
+<div>
+    <a asp-controller="User" asp-action="Index">Retour</a>
+</div>
