--- a/ReseauSocial.Asp/Views/Article/GetArticleById.cshtml
+++ b/ReseauSocial.Asp/Views/Article/GetArticleById.cshtml
@@ -1,5 +1,5 @@
 ﻿@model ReseauSocial.Asp.Models.ArticleAsp
-
+@inject ReseauSocial.Asp.Sessions.ISessionHelpers sessionManager
 @{
     ViewData["Title"] = "GetArticleById";
 }
@@ -7,43 +7,88 @@
 <h1>Details de l'article</h1>
 
 <div>
-   
+
     <hr />
     <dl class="row">
-      
-        <dt class = "col-sm-2">
+       
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Title)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Title)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Content)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Content)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.CommentOk)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.CommentOk)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.OnLigne)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.OnLigne)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.UserId)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Model.UserArticle.LastName @Model.UserArticle.FirstName
         </dd>
     </dl>
 </div>
+
 <div>
-    @Html.ActionLink("Modifier", "Update", new {  id = Model.Id }) |
+    <a asp-controller="Article" asp-action="Update" asp-route-id="@Model.Id " class="btn btn-success">Modifier</a>
+</div>
+
+
+<div>
     <a asp-action="Index">Retour</a>
 </div>
+
+<hr />
+<hr />
+<div>
+    <h2>Commentaires</h2>
+    <div class="container">
+        
+            <div class="m-2">
+                <form>
+                    <div class="form-group">
+                        <label for="comment">Votre commentaire</label>
+                        <input id="comment" name="comment" type="text" class="form-control" placeholder="Entrez ici votre commentaire" />
+                    </div>
+                    <button id="submitButton" type="submit" class="btn btn-primary">Envoyer</button>
+                </form>
+            </div>
+            <div class="m-2">
+                <h3>Liste des commentaires</h3>
+                <ul id="listMessages" class="list-group">
+                    @*
+                                        @foreach (var comment in Model.Comments)
+                        {
+                        <li class="list-item">            <a asp-controller="User" asp-action="GetById" asp-route-id="@comment.CreatorId">                @(comment.Creator.LastName + " " + comment.Creator.FirstName)
+                            </a> a dit : @comment.Content le  @comment.CreatedDate.ToString()
+                        </li>                        <partial name="_CommentInListItemPartial" model="@comment" />                        }
+                    *@
+                </ul>
+            </div>
+     </div>
+</div>
+
+<div>
+    <a asp-controller="Article" asp-action="GetMyArticle">Retour aux articles</a>
+</div>
+<script>
+    var curentUserId = parseInt(@sessionManager.CurentUser.Id.ToString());
+    var articleId = parseInt(@Model.Id.ToString());
+</script>
+<script src="~/js/dist/browser/signalr.js"></script>
+<script src="~/js/CommentHub.js"></script>
