--- a/ReseauSocial.Asp/Views/Follower/GetAllFollowersOfOneUser.cshtml
+++ b/ReseauSocial.Asp/Views/Follower/GetAllFollowersOfOneUser.cshtml
@@ -2,10 +2,10 @@
 @inject ReseauSocial.Asp.Sessions.ISessionHelpers sessionManager
 @inject BLL.Interfaces.IFollowerBll _followerBll
 @{
-    ViewData["Title"] = "Tous les contacts";
+    ViewData["Title"] = "Mes followers";
 }
 
-<h1>Tous les contacts</h1>
+<h1>Mes followers</h1>
 
 
 <table class="table">
@@ -51,3 +51,5 @@
         }
     </tbody>
 </table>
+
+
