--- a/ReseauSocial.Asp/Views/Message/Index.cshtml
+++ b/ReseauSocial.Asp/Views/Message/Index.cshtml
@@ -8,37 +8,47 @@
     var curentUser = userService.GetUser(sessionManager.CurentUser.Id);
 }
 
+
 <h1>Messages</h1>
-<h3 class="m-4">Bienvenu @curentUser.LastName @curentUser.FirstName</h3>
-<div class="row">
-    <div class="col-4 list-group " role="tablist" id="listContact">
 
-            @foreach (var item in Model)
-            {
-                <a class="m-2 list-group-item list-group-item-action d-flex w-100 justify-content-between" data-toggle="list" data-id="@item.Id">  @item.LastName  @item.FirstName <span></span></a>
-            }
-
-    </div>
-
-    <div class="col-8 " >
-        <div>
-            <form>
-                <div class="form-group">
-                    <label for="message">Message</label>
-                    <input name="message" type="text" class="form-control" id="message" placeholder="Votre message">
-                </div>
-                <button id="submitButton" type="submit" class="btn btn-primary">Envoyer</button>
-            </form>
+<div>
+    <div class="sticky-top bg-light row" id="HeaderPanel">
+        <div class="col-4">
+            <button id="NewMessageButton" class="btn btn-primary">Nouveau message</button>
         </div>
-        <div>
-            <h4 id="messageTitle" class="m-2"></h4>
-            <ul id="listMessage" class=" m-2 list-group">
-            </ul>
+        <div class="col-8">
+            <h3 class="m-4">Bienvenu @curentUser.LastName @curentUser.FirstName</h3>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-4">
+                <div class=" list-group " role="tablist" id="listContact"></div>
+                <div class=" list-group  " role="tablist" id="listUsers" style="display:none"></div>
+            </div>
+            
+
+            
+
+            <div class="col-8 ">
+                <div>
+                    <form>
+                        <div class="form-group">
+                            <label for="message">Message</label>
+                            <input name="message" type="text" class="form-control" id="message" placeholder="Votre message">
+                        </div>
+                        <button id="submitButton" type="submit" class="btn btn-primary">Envoyer</button>
+                    </form>
+                </div>
+                <div>
+                    <h4 id="messageTitle" class="m-2"></h4>
+                    <ul id="listMessage" class=" m-2 list-group">
+                    </ul>
+                </div>
+            </div>
         </div>
     </div>
 </div>
-
-
 
 
 <script>
