--- a/ReseauSocial.Asp/Views/Follower/GetAllFollowedOfOneUser.cshtml
+++ b/ReseauSocial.Asp/Views/Follower/GetAllFollowedOfOneUser.cshtml
@@ -1,6 +1,7 @@
 ﻿@model IEnumerable<ReseauSocial.Asp.Models.UserAsp>
 @inject ReseauSocial.Asp.Sessions.ISessionHelpers sessionManager
 @inject BLL.Interfaces.IFollowerBll _followerBll
+@inject BLL.Interfaces.IBlacklistBll _blacklistBll
 @{
     ViewData["Title"] = "Mes suivis";
 }
@@ -39,13 +40,19 @@
                     }
                     else
                     {
-                        <a asp-controller="Follower" asp-action="Follow" asp-route-id="@item.Id" class="btn btn-success">Suivre</a>
+                        @if (!_blacklistBll.IsUser1BlacklisterOfUser2(sessionManager.CurentUser.Id, item.Id))
+                        {
+                            <a asp-controller="Follower" asp-action="Follow" asp-route-id="@item.Id" class="btn btn-success">Suivre</a>
+                        }
                     }
-
-
-
-
-                    @*  <a asp-controller="User" asp-action="Blacklist" asp-route-id="@item.Id" class="btn btn-success">Black lister</a>*@
+                    @if (_blacklistBll.IsUser1BlacklisterOfUser2(sessionManager.CurentUser.Id, item.Id))
+                    {
+                        <a asp-controller="Blacklist" asp-action="UnBlacklist" asp-route-id="@item.Id" class="btn btn-danger">Déblacklister</a>
+                    }
+                    else
+                    {
+                        <a asp-controller="Blacklist" asp-action="Blacklist" asp-route-id="@item.Id" class="btn btn-danger">Blacklister</a>
+                    }
                 </td>
             </tr>
         }
