--- a/ReseauSocial.Asp/Views/Article/Index.cshtml
+++ b/ReseauSocial.Asp/Views/Article/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@inject ReseauSocial.Asp.Sessions.ISessionHelpers sessionManager
+@inject BLL.Interfaces.IArticleBll articleService
 @model IEnumerable<ReseauSocial.Asp.Models.ArticleAsp>
 
 @{
@@ -57,7 +58,15 @@
                         }
                         else
                         {
-                            <a asp-controller="Article" asp-action="SignalArticle" asp-route-id="@item.Id" class="btn btn-danger">Signaler</a>
+                            @if (!articleService.IsSignalByUser(item.Id, sessionManager.CurentUser.Id))
+                            {
+                                <a asp-controller="Article" asp-action="SignalArticle" asp-route-id="@item.Id" class="btn btn-danger">Signaler</a>
+                            }
+                            else
+                            {
+                                <a asp-controller="Article" asp-action="UnSignalArticle" asp-route-id="@item.Id" class="btn btn-danger">Désignaler</a>
+                            }
+
                         }
                     }
 
