--- a/ReseauSocial.Asp/Views/User/Update.cshtml
+++ b/ReseauSocial.Asp/Views/User/Update.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "Update";
 }
 
-<h1>Update</h1>
+<h1>Modifier votre profil</h1>
 
-<h4>UpdateUser</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
